--- a/wiki/it/Macro_Download_Classifications.html
+++ b/wiki/it/Macro_Download_Classifications.html
@@ -77,11 +77,8 @@ Download Classifications
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This macro downloads a series of BIM classification systems from <a rel="nofollow" class="external free" href="https://github.com/Moult/IfcClassification">https://github.com/Moult/IfcClassification</a> and places them in the appropriate folder on your computer so they are found by the <a href="../BIM_Classification.html" title="BIM Classification">BIM Classification</a> tool.
-</p>
-</div>
-<p><span id="Usage"></span>
+<p>Questa macro scarica una serie di sistemi di classificazione BIM da <a rel="nofollow" class="external free" href="https://github.com/Moult/IfcClassification">https://github.com/Moult/IfcClassification</a> e li inserisce nella cartella appropriata sul computer in modo che possano essere trovati dallo strumento <a href="../it/BIM_Classification.html" title="BIM Classification/it">Classificazione di BIM</a>.
+</p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <p>Eseguire la macro. Dopo l'esecuzione, i nuovi sistemi di classificazione saranno disponibili nello strumento <a href="../it/BIM_Classification.html" title="BIM Classification/it">Classificazione di BIM</a>. Dopo l'esecuzione della macro e l'installazione dei sistemi di classificazione, &egrave; possibile eliminarla in tutta sicurezza.
@@ -115,13 +112,13 @@ else:
     print("error getting repo contents")</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123105533
+Cached time: 20260123105537
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.024 seconds
-Real time usage: 0.034 seconds
-Preprocessor visited node count: 97/1000000
+CPU time usage: 0.027 seconds
+Real time usage: 0.039 seconds
+Preprocessor visited node count: 96/1000000
 Post&#8208;expand include size: 2157/2097152 bytes
 Template argument size: 769/2097152 bytes
 Highest expansion depth: 7/100
@@ -131,12 +128,12 @@ Unstrip post&#8208;expand size: 1878/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.404      1 -total
- 61.09%    3.301      1 Template:Macro
- 37.16%    2.008      1 Template:MacroCode
+100.00%    4.674      1 -total
+ 63.14%    2.951      1 Template:Macro
+ 34.72%    1.623      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105533 and revision id 1742861. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412402-0!canonical and timestamp 20260123105537 and revision id 1742863. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
