--- a/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
+++ b/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
@@ -72,11 +72,11 @@ Aperture
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Permette di creare delle aperture nei contenitori in un modo molto pratico
 </p>
 </div>
@@ -343,12 +343,12 @@ else:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260107135858
+Cached time: 20260123105704
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.057 seconds
+CPU time usage: 0.048 seconds
+Real time usage: 0.101 seconds
 Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 3135/2097152 bytes
 Template argument size: 10389/2097152 bytes
@@ -359,14 +359,14 @@ Unstrip post&#8208;expand size: 11046/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.991      1 -total
- 72.51%    8.694      1 Template:Macro/it
- 30.69%    3.680      1 Template:ColoredText
- 14.54%    1.743      1 Template:Caption
- 11.20%    1.343      1 Template:MacroCode
+100.00%   15.033      1 -total
+ 40.32%    6.061      1 Template:Macro/it
+ 31.39%    4.719      1 Template:MacroCode
+ 26.88%    4.041      1 Template:Caption
+ 18.22%    2.739      1 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260107135858 and revision id 1728824. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123105704 and revision id 1742867. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
