--- a/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
+++ b/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
@@ -75,12 +75,8 @@ Aperture
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Permette di creare delle aperture nei contenitori in un modo molto pratico
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=Easy-cutouts.gif&amp;filetimestamp=20161126201657&amp;.html" class="mw-file-description"><img src="../File/Easy-cutouts.gif" decoding="async" width="600" height="320" class="mw-file-element" data-file-width="1600" data-file-height="852"></a></span>
+</p><p><span typeof="mw:File"><a href="../index.php?title=Easy-cutouts.gif&amp;filetimestamp=20161126201657&amp;.html" class="mw-file-description"><img src="../File/Easy-cutouts.gif" decoding="async" width="600" height="320" class="mw-file-element" data-file-width="1600" data-file-height="852"></a></span>
 </p>
 <div class="mw-translate-fuzzy">
 <p><span typeof="mw:File"><a href="../index.php?title=Easy-cutouts.gif&amp;filetimestamp=20161126201657&amp;.html" class="mw-file-description"><img src="../File/Easy-cutouts.gif" decoding="async" width="1000" height="533" class="mw-file-element" data-file-width="1600" data-file-height="852"></a></span>
@@ -343,13 +339,13 @@ else:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123105704
+Cached time: 20260123105724
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.101 seconds
-Preprocessor visited node count: 135/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.052 seconds
+Preprocessor visited node count: 131/1000000
 Post&#8208;expand include size: 3135/2097152 bytes
 Template argument size: 10389/2097152 bytes
 Highest expansion depth: 7/100
@@ -359,14 +355,14 @@ Unstrip post&#8208;expand size: 11046/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.033      1 -total
- 40.32%    6.061      1 Template:Macro/it
- 31.39%    4.719      1 Template:MacroCode
- 26.88%    4.041      1 Template:Caption
- 18.22%    2.739      1 Template:ColoredText
+100.00%   11.057      1 -total
+ 46.80%    5.175      1 Template:Macro/it
+ 39.80%    4.401      1 Template:MacroCode
+ 22.78%    2.519      1 Template:ColoredText
+ 11.92%    1.318      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123105704 and revision id 1742867. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123105724 and revision id 1742869. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
