--- a/wiki/Books.html
+++ b/wiki/Books.html
@@ -11,9 +11,11 @@
 <meta property="mw:PageProp/toc">
 <h2><span id="FreeCAD_Beginner.E2.80.99s_Handbook"></span><span class="mw-headline" id="FreeCAD_Beginner&rsquo;s_Handbook">FreeCAD Beginner&rsquo;s Handbook</span></h2>
 <p>By Aleksander Sadowski, published December 2025, paperback
+</p><p><br>
 </p>
-<figure class="mw-default-size" typeof="mw:File/Thumb"><a href="File/Freecad-beginners-handbook-book-cover.jpg" class="mw-file-description"><img alt="FreeCAD Beginners Handbook cover" src="File/Freecad-beginners-handbook-book-cover.jpg" decoding="async" width="300" height="431" class="mw-file-element" data-file-width="1000" data-file-height="1436"></a><figcaption></figcaption></figure>
-<p>Learn 3D design with FreeCAD through real-world examples and hands-on projects.
+<figure class="mw-default-size" typeof="mw:File/Thumb"><a href="File/Freecad-beginners-handbook-book-cover-v2.jpg" class="mw-file-description"><img alt="FreeCAD Beginners Handbook cover" src="File/Freecad-beginners-handbook-book-cover-v2.jpg" decoding="async" width="300" height="431" class="mw-file-element" data-file-width="1000" data-file-height="1436"></a><figcaption>The FreeCAD Beginners Handbook includes a mars rover project for readers to create from scratch at the end of the book.</figcaption></figure>
+<p><br>
+Learn 3D design with FreeCAD through real-world examples and hands-on projects.
 </p><p>Discover the world of 3D design with FreeCAD, the free and open-source CAD software used by engineers, designers, and makers worldwide. This full-color, practical guide takes you step by step through a reliable modeling workflow, showing you how to create real-world products and inventions, and even complete a complex project like designing a Mars Rover from scratch to solidify your knowledge.
 </p>
 <ul><li>Gain the confidence to develop your own inventions, from initial idea to finished, 3D-printable product.</li>
@@ -22,6 +24,7 @@
 <li>Prepare and export models for 3D printing using slicer software, ensuring your designs are ready for production.</li>
 <li>Complete projects that teach real-world applications of 3D design, including practical gadgets and a Mars Rover project to consolidate your skills.</li></ul>
 <p>By the end of this book, you will be able to design your own innovative gadgets, explore real-world engineering solutions, and confidently prepare models for 3D printing. The included Mars Rover project provides a challenging yet rewarding opportunity to apply all the techniques learned in a single, cohesive design.
+</p><p>The FreeCAD Beginner's Handbook was sponsored by Prusa Research.
 </p><p><b><a rel="nofollow" class="external free" href="https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX">https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX</a></b>
 </p>
 <div style="clear:both"></div>
@@ -65,12 +68,12 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251231195131
+Cached time: 20260123115243
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.091 seconds
+CPU time usage: 0.049 seconds
+Real time usage: 0.069 seconds
 Preprocessor visited node count: 73/1000000
 Post&#8208;expand include size: 150/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -81,11 +84,11 @@ Unstrip post&#8208;expand size: 1367/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    1.626      1 -total
- 78.53%    1.277      5 Template:Clear
+100.00%    1.650      1 -total
+ 86.84%    1.433      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297843-0!canonical and timestamp 20251231195131 and revision id 1724396. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297843-0!canonical and timestamp 20260123115337 and revision id 1742871. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
