--- a/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
+++ b/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
@@ -83,11 +83,11 @@ Aperture
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">qui una demo con un contenitore Arduino Uno</p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Usage"></span>
+</p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Utilizzo_2">Utilizzo</span></h2>
 <p>Selezionare una faccia dell'oggetto di base del ritaglio e la macro crea un clone del suo contorno esterno con un margine di 0,5 millimetri (impostato nella macro)
 </p>
 </div>
@@ -339,12 +339,12 @@ else:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123105724
+Cached time: 20260123123330
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.035 seconds
-Real time usage: 0.052 seconds
+CPU time usage: 0.040 seconds
+Real time usage: 0.077 seconds
 Preprocessor visited node count: 131/1000000
 Post&#8208;expand include size: 3135/2097152 bytes
 Template argument size: 10389/2097152 bytes
@@ -355,14 +355,14 @@ Unstrip post&#8208;expand size: 11046/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.057      1 -total
- 46.80%    5.175      1 Template:Macro/it
- 39.80%    4.401      1 Template:MacroCode
- 22.78%    2.519      1 Template:ColoredText
- 11.92%    1.318      1 Template:Caption
+100.00%   14.412      1 -total
+ 53.09%    7.651      1 Template:Macro/it
+ 26.31%    3.791      1 Template:ColoredText
+ 25.01%    3.605      1 Template:Caption
+ 20.07%    2.892      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123105724 and revision id 1742869. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123123330 and revision id 1742873. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
