--- a/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
+++ b/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Easy_cutouts_for_Enclosure_Design.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Einfache Ausschnitte f&uuml;r Geh&auml;usedesign (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Easy_cutouts_for_Enclosure_Design.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Easy cutouts for Enclosure Design (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Easy_cutouts_for_Enclosure_Design.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Easy cutouts for Enclosure Design (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Easy_cutouts_for_Enclosure_Design.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Easy cutouts for Enclosure Design (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -88,9 +88,7 @@ Aperture
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <p>Selezionare una faccia dell'oggetto di base del ritaglio e la macro crea un clone del suo contorno esterno con un margine di 0,5 millimetri (impostato nella macro)
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-</div>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Script_2">Script</span></h2>
 <p>L'icona per la barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Easy_cutouts_for_Enclosure_Design_icon.png&amp;filetimestamp=20161126202749&amp;.html" class="mw-file-description"><img src="../File/Macro_Easy_cutouts_for_Enclosure_Design_icon.png" decoding="async" width="32" height="31" class="mw-file-element" data-file-width="32" data-file-height="31"></a></span>
@@ -336,30 +334,30 @@ else:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123123340
+Cached time: 20260123123346
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.068 seconds
-Preprocessor visited node count: 127/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.052 seconds
+Preprocessor visited node count: 126/1000000
 Post&#8208;expand include size: 3135/2097152 bytes
 Template argument size: 10389/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 11046/5000000 bytes
+Unstrip post&#8208;expand size: 11047/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.989      1 -total
- 47.55%    8.079      1 Template:Macro/it
- 27.24%    4.627      1 Template:Caption
- 22.46%    3.815      1 Template:MacroCode
- 18.59%    3.158      1 Template:ColoredText
+100.00%   10.795      1 -total
+ 59.29%    6.400      1 Template:Macro/it
+ 21.37%    2.307      1 Template:ColoredText
+ 20.52%    2.215      1 Template:MacroCode
+ 18.02%    1.945      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123123339 and revision id 1742875. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123123346 and revision id 1742877. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
