--- a/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
+++ b/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
@@ -89,12 +89,8 @@ Aperture
 <p>Selezionare una faccia dell'oggetto di base del ritaglio e la macro crea un clone del suo contorno esterno con un margine di 0,5 millimetri (impostato nella macro)
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Script_2">Script</span></h2>
-<p>L'icona per la barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Easy_cutouts_for_Enclosure_Design_icon.png&amp;filetimestamp=20161126202749&amp;.html" class="mw-file-description"><img src="../File/Macro_Easy_cutouts_for_Enclosure_Design_icon.png" decoding="async" width="32" height="31" class="mw-file-element" data-file-width="32" data-file-height="31"></a></span>
-</p>
-</div>
-<p><b>Macro_Easy_cutouts_for_Enclosure_Design.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Easy_cutouts_for_Enclosure_Design_icon.png&amp;filetimestamp=20161126202749&amp;.html" class="mw-file-description"><img src="../File/Macro_Easy_cutouts_for_Enclosure_Design_icon.png" decoding="async" width="32" height="31" class="mw-file-element" data-file-width="32" data-file-height="31"></a></span>
+</p><p><b>Macro_Easy_cutouts_for_Enclosure_Design.FCMacro</b>
 </p>
 <pre># -*- coding: utf-8 -*-
 #
@@ -334,13 +330,13 @@ else:
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123123346
+Cached time: 20260123123406
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.052 seconds
-Preprocessor visited node count: 126/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.088 seconds
+Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 3135/2097152 bytes
 Template argument size: 10389/2097152 bytes
 Highest expansion depth: 7/100
@@ -350,14 +346,14 @@ Unstrip post&#8208;expand size: 11047/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.795      1 -total
- 59.29%    6.400      1 Template:Macro/it
- 21.37%    2.307      1 Template:ColoredText
- 20.52%    2.215      1 Template:MacroCode
- 18.02%    1.945      1 Template:Caption
+100.00%   16.642      1 -total
+ 62.74%   10.441      1 Template:Macro/it
+ 28.83%    4.797      1 Template:ColoredText
+ 20.42%    3.398      1 Template:Caption
+ 15.74%    2.620      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123123346 and revision id 1742877. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123123406 and revision id 1742879. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
