--- a/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
+++ b/wiki/it/Macro_Easy_cutouts_for_Enclosure_Design.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Easy_cutouts_for_Enclosure_Design.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Einfache Ausschnitte f&uuml;r Geh&auml;usedesign (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Easy_cutouts_for_Enclosure_Design.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Easy cutouts for Enclosure Design (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Easy_cutouts_for_Enclosure_Design.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Easy cutouts for Enclosure Design (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Easy_cutouts_for_Enclosure_Design.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Easy cutouts for Enclosure Design (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -78,11 +78,7 @@ Aperture
 <p>Permette di creare delle aperture nei contenitori in un modo molto pratico
 </p><p><span typeof="mw:File"><a href="../index.php?title=Easy-cutouts.gif&amp;filetimestamp=20161126201657&amp;.html" class="mw-file-description"><img src="../File/Easy-cutouts.gif" decoding="async" width="600" height="320" class="mw-file-element" data-file-width="1600" data-file-height="852"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
-<p><span typeof="mw:File"><a href="../index.php?title=Easy-cutouts.gif&amp;filetimestamp=20161126201657&amp;.html" class="mw-file-description"><img src="../File/Easy-cutouts.gif" decoding="async" width="1000" height="533" class="mw-file-element" data-file-width="1600" data-file-height="852"></a></span>
-</p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">qui una demo con un contenitore Arduino Uno</p>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Qui una demo con un contenitore per Arduino Uno</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
@@ -322,38 +318,36 @@ if Gui.ActiveDocument:
         App.Console.PrintMessage("Select ONLY one single Face of object!"+"\n")
 else:
     sayw("no document to work with")</pre>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Link">Link</span></h2>
-</div>
 <h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>Nel forum&nbsp;:  <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=22&amp;t=18488">Easy cutouts for Enclosure Design Macro</a>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123123406
+Cached time: 20260123123509
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.036 seconds
-Real time usage: 0.088 seconds
-Preprocessor visited node count: 122/1000000
-Post&#8208;expand include size: 3135/2097152 bytes
-Template argument size: 10389/2097152 bytes
+Real time usage: 0.056 seconds
+Preprocessor visited node count: 119/1000000
+Post&#8208;expand include size: 3143/2097152 bytes
+Template argument size: 10393/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 11047/5000000 bytes
+Unstrip post&#8208;expand size: 11051/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.642      1 -total
- 62.74%   10.441      1 Template:Macro/it
- 28.83%    4.797      1 Template:ColoredText
- 20.42%    3.398      1 Template:Caption
- 15.74%    2.620      1 Template:MacroCode
+100.00%    9.152      1 -total
+ 65.14%    5.962      1 Template:Macro/it
+ 31.84%    2.914      1 Template:ColoredText
+ 19.66%    1.799      1 Template:MacroCode
+ 13.63%    1.248      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123123406 and revision id 1742879. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:76282-0!canonical and timestamp 20260123123509 and revision id 1742883. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
