--- a/wiki/it/Macro_Batch_Export_To_Mesh.html
+++ b/wiki/it/Macro_Batch_Export_To_Mesh.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Batch_Export_To_Mesh.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Stapelexport in Netz (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Batch_Export_To_Mesh.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Batch Export To Mesh (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Batch_Export_To_Mesh.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Batch Export To Mesh (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Batch_Export_To_Mesh.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Zbiorczy eksport do siatki (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -74,9 +74,9 @@ Batch Export To Mesh
 </td></tr>
 </tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This macro helps batch converting to mesh and exporting STL and OBJ files. It adds a GUI for speeding up the conversion and file saving of selected objects.
 </p>
@@ -1174,12 +1174,12 @@ This work is licensed under GNU Lesser General Public License (LGPL). To view a 
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260123135600
+Cached time: 20260123135611
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.058 seconds
+CPU time usage: 0.034 seconds
+Real time usage: 0.048 seconds
 Preprocessor visited node count: 100/1000000
 Post&#8208;expand include size: 2172/2097152 bytes
 Template argument size: 289/2097152 bytes
@@ -1190,12 +1190,12 @@ Unstrip post&#8208;expand size: 50450/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.222      1 -total
- 64.91%    5.986      1 Template:Macro
- 33.38%    3.078      1 Template:MacroCode
+100.00%    7.016      1 -total
+ 63.92%    4.485      1 Template:Macro
+ 34.72%    2.436      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135600 and revision id 1742886. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135611 and revision id 1742888. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
