--- a/wiki/it/Macro_Batch_Export_To_Mesh.html
+++ b/wiki/it/Macro_Batch_Export_To_Mesh.html
@@ -87,7 +87,7 @@ Batch Export To Mesh
 <figure class="mw-halign-center" typeof="mw:File/Frameless"><a href="../index.php?title=Screenshot2.png&amp;filetimestamp=20241010153642&amp;.html" class="mw-file-description" title="presets"><img alt="Macro Batch Export To Mesh - presets" src="../File/Screenshot2.png" decoding="async" width="560" height="334" class="mw-file-element" data-file-width="1852" data-file-height="1104"></a><figcaption>presets</figcaption></figure>
 <p><span id="Features"></span>
 </p>
-<h2><span class="mw-headline" id="Funzione">Funzione</span></h2>
+<h2><span class="mw-headline" id="Funzioni">Funzioni</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>FreeCAD <i>standard</i> meshing option</li>
 <li>Custom names (object, project or custom)</li>
@@ -1174,12 +1174,12 @@ This work is licensed under GNU Lesser General Public License (LGPL). To view a 
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260123135635
+Cached time: 20260123135643
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.059 seconds
+CPU time usage: 0.032 seconds
+Real time usage: 0.042 seconds
 Preprocessor visited node count: 100/1000000
 Post&#8208;expand include size: 2172/2097152 bytes
 Template argument size: 289/2097152 bytes
@@ -1190,12 +1190,12 @@ Unstrip post&#8208;expand size: 50450/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.234      1 -total
- 57.79%    4.181      1 Template:Macro
- 40.83%    2.954      1 Template:MacroCode
+100.00%    6.779      1 -total
+ 67.25%    4.559      1 Template:Macro
+ 30.82%    2.089      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135635 and revision id 1742890. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135643 and revision id 1742892. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
