--- a/wiki/it/Macro_Colorize.html
+++ b/wiki/it/Macro_Colorize.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Einf&auml;rben (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Colorize.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Colorize (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Colorize (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Kolorowanie (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -77,11 +77,8 @@ Macro Colorize
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This macro allows to quickly and easily set the color and transparency of individual faces, edges, and vertices.
-</p>
-</div>
-<p><span id="Usage"></span>
+<p>Questa macro consente di impostare in modo rapido e semplice il colore e la trasparenza di singole facce, bordi e vertici.
+</p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -216,30 +213,30 @@ setColors()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123144320
+Cached time: 20260123144338
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.051 seconds
-Preprocessor visited node count: 119/1000000
+CPU time usage: 0.030 seconds
+Real time usage: 0.062 seconds
+Preprocessor visited node count: 118/1000000
 Post&#8208;expand include size: 3006/2097152 bytes
 Template argument size: 4629/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 5316/5000000 bytes
+Unstrip post&#8208;expand size: 5317/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.000      1 -total
- 41.49%    3.319      1 Template:Macro
- 21.39%    1.711      3 Template:Button
- 19.27%    1.542      1 Template:MacroCode
- 13.52%    1.082      1 Template:Clear
+100.00%   15.704      1 -total
+ 29.28%    4.599      1 Template:MacroCode
+ 27.59%    4.332      3 Template:Button
+ 24.93%    3.915      1 Template:Macro
+ 15.03%    2.360      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123144320 and revision id 1742943. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123144338 and revision id 1742945. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
